<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<ScrollView android:id="@+id/alert" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="640dp" >

			<RelativeLayout android:id="@+id/page_alert_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="0dp">

				<TextView android:id="@+id/_bg__alert_ek2"
					android:background="@drawable/_bg__alert_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />

				<ImageView android:id="@+id/path_2465_ek4"
					android:src="@drawable/path_2465_ek4"
					android:contentDescription="@string/path_2465_ek4"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="64dp" />

				<TextView android:id="@+id/medicamento_commercium_ek2"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/medicamento_commercium_color"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="20dp"
					android:layout_width="271dp"
					android:layout_height="28dp"
					android:text="@string/medicamento_commercium_ek2_string"
					android:layout_marginStart="28dp" />


				<RelativeLayout android:id="@+id/profile_large_ek4"
					android:layout_marginTop="12dp"
					android:layout_marginStart="306dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="306dp">

					<ImageView android:id="@+id/path_2468_ek4"
						android:src="@drawable/path_2468_ek4"
						android:contentDescription="@string/path_2468_ek4"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="43dp"
						android:layout_height="43dp" />


					<RelativeLayout android:id="@+id/symbol_6___1_ek4"
						android:layout_marginTop="14dp"
						android:layout_marginStart="14dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="14dp">

						<ImageView android:id="@+id/union_1_ek5"
							android:src="@drawable/union_1_ek5"
							android:contentDescription="@string/union_1_ek5"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="17dp"
							android:layout_height="17dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_107"
					android:layout_marginTop="213dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="18dp">


					<RelativeLayout android:id="@+id/group_105"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="0dp">

						<ImageView android:id="@+id/path_2471"
							android:src="@drawable/path_2471"
							android:contentDescription="@string/path_2471"
							 android:layout_marginLeft="12dp"
							 android:layout_marginStart="12dp"
							android:layout_marginTop="0dp"
							android:layout_width="312dp"
							android:layout_height="188.93334960938dp" />

						<ImageView android:id="@+id/logo1111_ek3"
							android:src="@drawable/logo1111_ek3"
							android:contentDescription="@string/logo1111_ek3"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="90dp"
							android:layout_height="64dp" />

						<TextView android:id="@+id/medicamento_commercium_ek3"

							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="18sp"
							android:textColor="@color/commercium_color"
							android:layout_marginLeft="69dp"
							android:layout_marginTop="18dp"
							android:layout_width="245dp"
							android:layout_height="25dp"
							android:text="@string/medicamento_commercium_ek3_string"
							android:layout_marginStart="69dp" />

						<TextView android:id="@+id/are_you_sure_you_want_to_logout_"

							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="18sp"
							android:textColor="@color/please_enter_the_4_digit_code_sent_to_your_mail_xdefghy_gmail_com_color"
							android:layout_marginLeft="29dp"
							android:layout_marginTop="84dp"
							android:layout_width="277dp"
							android:layout_height="25dp"
							android:text="@string/are_you_sure_you_want_to_logout__string"
							android:layout_marginStart="29dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/group_106"
						android:layout_marginTop="142dp"
						android:layout_marginStart="36dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="36dp">


						<RelativeLayout android:id="@+id/group_97_ek3"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="0dp">

							<Button android:id="@+id/rectangle_995_ek7"
								android:background="@drawable/rectangle_995_ek7_shape"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:text="no"
								android:layout_width="83.966064453125dp"
								android:layout_height="38.2734375dp" />

							<TextView
								android:id="@+id/no"
								android:layout_width="33dp"
								android:layout_height="28dp"
								android:layout_gravity="center_horizontal|center"
								android:layout_marginStart="25dp"
								android:layout_marginLeft="25dp"
								android:layout_marginTop="7dp"
								android:gravity="center"
								android:text="no"
								android:textColor="@color/medicamento_commercium_color"
								android:textSize="20sp" />

						</RelativeLayout>

						<View android:id="@+id/rectangle_996"
							android:background="@drawable/rectangle_996_shape"
							 android:layout_marginLeft="168dp"
							 android:layout_marginStart="168dp"
							android:layout_marginTop="0dp"
							android:layout_width="83.966064453125dp"
							android:layout_height="38.2734375dp" />

						<Button android:id="@+id/yes"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="20sp"
							android:textColor="@color/medicamento_commercium_color"
							android:layout_marginLeft="190dp"
							android:layout_marginTop="7dp"
							android:layout_width="39dp"
							android:layout_height="28dp"
							android:text="@string/yes_string"
							android:layout_marginStart="190dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_97_ek4"
					android:layout_marginTop="579dp"
					android:layout_marginStart="26dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="26dp">

					<View android:id="@+id/rectangle_995_ek8"
						android:background="@drawable/rectangle_995_ek8_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"

						android:layout_width="101.96606445312dp"
						android:layout_height="44.546875dp" />

					<TextView android:id="@+id/exit_ek3"

						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/medicamento_commercium_color"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="10dp"
						android:layout_width="41dp"
						android:layout_height="28dp"
						android:text="@string/exit_ek3_string"
						android:layout_marginStart="30dp" />

				</RelativeLayout>

				<ImageView android:id="@+id/med_ek4"
					android:src="@drawable/med_ek4"
					android:contentDescription="@string/med_ek4"
					 android:layout_marginLeft="128dp"
					 android:layout_marginStart="128dp"
					android:layout_marginTop="455dp"
					android:layout_width="420dp"
					android:layout_height="263dp" />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>