<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/verfied" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="640dp" >





			<RelativeLayout android:id="@+id/page_verfied_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<View
					android:id="@+id/_bg__verfied_ek2"
					android:layout_width="360dp"
					android:layout_height="640dp"
					android:layout_marginStart="0dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__verfied_ek2_shape" />

				<RelativeLayout android:id="@+id/group_87_ek1"
					android:layout_marginTop="11dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

				</RelativeLayout>

				<TextView android:id="@+id/verified"
					android:fontFamily="Raleway"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="40sp"
					android:textColor="@color/medicamento_color"
					android:layout_marginLeft="85dp"
					android:layout_marginTop="337dp"
					android:layout_width="181dp"
					android:layout_height="55dp"
					android:text="@string/verified_string"
					 />

				<ImageView android:id="@+id/og_image"
					android:src="@drawable/og_image"
					android:contentDescription="@string/og_image"
					 android:layout_marginLeft="71dp"
					 android:layout_marginStart="71dp"
					android:layout_marginTop="99dp"
					android:layout_width="204.5dp"
					android:layout_height="204.5dp" />


				<RelativeLayout android:id="@+id/group_31_ek3"
					android:layout_marginTop="464dp"
					android:layout_marginStart="55dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_10_ek3"
						android:background="@drawable/rectangle_10_ek3_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="249.55004882812dp"
						android:layout_height="48.021392822266dp" />

					<TextView android:id="@+id/go_to_homepage"
						android:fontFamily="Raleway"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="18sp"
						android:textColor="@color/signup_ek3_color"
						android:layout_marginLeft="43dp"
						android:layout_marginTop="13dp"
						android:layout_width="163dp"
						android:layout_height="25dp"
						android:text="@string/go_to_homepage_string"
						 />

				</RelativeLayout>

			</RelativeLayout>






		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>